<resources>
    <string name="app_name">BadSheet</string>
    <string name="match_settings">Match Settings</string>
    <string name="info">Info</string>
    <string name="hometeam">Hometeam</string>
    <string name="awayteam">Awayteam</string>
    <string name="group">Group</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="complete_match">Complete Match</string>
    <string name="_1_men_doubles">1. Men Doubles</string>
    <string name="_2_men_doubles">2. Men Doubles</string>
    <string name="women_doubles">Women Doubles</string>
    <string name="_1_men_single">1. Men Single</string>
    <string name="_2_men_single">2. Men Single</string>
    <string name="_3_men_single">3. Men Single</string>
    <string name="women_single">Women Single</string>
    <string name="mixed">Mixed</string>
    <string name="sharedPreferences">SHARED_PREFERENCES</string>
    <string name="errorfile">Error: File does not exist.</string>
    <string name="save_match">Save Match</string>
    <string name="load_match">Load Match</string>
    <string name="reset_match">Reset Match</string>
    <string name="remove_matches">Remove Matches</string>
    <string name="_1_md">1 MD</string>
    <string name="_2_md">2 MD</string>
    <string name="wd">WD</string>
    <string name="_1_ms">1 MS</string>
    <string name="_2_ms">2 MS</string>
    <string name="_3_ms">3 MS</string>
    <string name="ws">WS</string>
    <string name="mx">MX</string>
    <string name="draw">Draw</string>
    <string name="show_results">Show Results</string>
    <string name="sign_home">Sign Home</string>
    <string name="sign_away">Sign Away</string>
    <string name="finish_match">Finish Match</string>
    <string name="share_results">Share Results</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="no_permission">No Permission</string>
    <string name="signs_folder">/signs</string>
    <string name="sign_saved">Signature Saved</string>
    <string name="abort">Abort</string>
    <string name="signature">Signature</string>
    <string name="update_teamnames">Update teamnames</string>
</resources>