<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompleteMatchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showResults"
            android:text="@string/show_results" />

        <Button
            android:id="@+id/button_sign_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="signHome"
            android:text="@string/sign_home" />

        <Button
            android:id="@+id/button_sign_away"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="signAway"
            android:text="@string/sign_away" />

        <Button
            android:id="@+id/button_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="finishMatch"
            android:text="@string/finish_match" />

        <Button
            android:id="@+id/button_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="shareResults"
            android:text="@string/share_results" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>