<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_matchsettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openMatchSettings"
            android:text="@string/match_settings" />

        <Button
            android:id="@+id/button_hometeam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openTeamA"
            android:text="@string/hometeam" />

        <Button
            android:id="@+id/button_awayteam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openTeamB"
            android:text="@string/awayteam" />

        <Button
            android:id="@+id/button_scoreboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openScoreboard"
            android:text="@string/scoreboard" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="150dp" />

        <Button
            android:id="@+id/button_complete_match"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/complete_match" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>