<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_time"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/time"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_location" />

    <TextView
        android:id="@+id/text_date"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/date"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_time" />

    <TextView
        android:id="@+id/text_location"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/location"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_group" />

    <TextView
        android:id="@+id/text_group"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/group"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_awayteam" />

    <TextView
        android:id="@+id/text_hometeam"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/hometeam"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_awayteam"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/awayteam"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_hometeam" />

    <AutoCompleteTextView
        android:id="@+id/edit_hometeam"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:labelFor="@id/text_hometeam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/edit_awayteam"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:labelFor="@id/text_hometeam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_hometeam" />

    <EditText
        android:id="@+id/edit_group"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="@string/group"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_awayteam" />

    <EditText
        android:id="@+id/edit_location"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="@string/location"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_group" />

    <EditText
        android:id="@+id/edit_time"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="@string/time"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_location" />

    <EditText
        android:id="@+id/edit_date"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="@string/date"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_time" />

</androidx.constraintlayout.widget.ConstraintLayout>