<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoreboardActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:id="@+id/layout_tablelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/game_0"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:text="@string/_1_md"
                    tools:text="1 MD" />

                <TextView
                    android:id="@+id/name_0"
                    android:layout_width="230dp"
                    android:layout_height="match_parent"
                    android:singleLine="false" />

                <TextView
                    android:id="@+id/name_8"
                    android:layout_width="230dp"
                    android:layout_height="match_parent"
                    android:singleLine="false" />

                <EditText
                    android:id="@+id/set_00"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/set_01"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/set_02"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/game_"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:text="@string/_2_md" />

                <TextView
                    android:id="@+id/name_1"
                    android:layout_width="230dp"
                    android:layout_height="match_parent"
                    android:singleLine="false" />

                <TextView
                    android:id="@+id/name_9"
                    android:layout_width="230dp"
                    android:layout_height="match_parent"
                    android:singleLine="false" />

                <EditText
                    android:id="@+id/set_"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/set_2"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/set_3"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/game_2"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:text="@string/wd" />

                <TextView
                    android:id="@+id/name_2"
                    android:layout_width="230dp"
                    android:layout_height="match_parent"
                    android:singleLine="false" />

                <TextView
                    android:id="@+id/name_10"
                    android:layout_width="230dp"
                    android:layout_height="match_parent"
                    android:singleLine="false" />

                <EditText
                    android:id="@+id/set_4"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/set_5"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/set_6"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/game_3"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:text="@string/_1_ms" />

                <TextView
                    android:id="@+id/name_3"
                    android:layout_width="230dp"
                    android:layout_height="match_parent"
                    android:singleLine="false" />

                <TextView
                    android:id="@+id/name_11"
                    android:layout_width="230dp"
                    android:layout_height="match_parent"
                    android:singleLine="false" />

                <EditText
                    android:id="@+id/set_7"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/set_8"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/set_9"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/game_4"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:text="@string/_2_ms" />

                <TextView
                    android:id="@+id/name_4"
                    android:layout_width="230dp"
                    android:layout_height="match_parent"
                    android:singleLine="false" />

                <TextView
                    android:id="@+id/name_12"
                    android:layout_width="230dp"
                    android:layout_height="match_parent"
                    android:singleLine="false" />

                <EditText
                    android:id="@+id/set_10"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/set_11"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/set_12"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/game_5"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:text="@string/_3_ms" />

                <TextView
                    android:id="@+id/name_5"
                    android:layout_width="230dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/name_13"
                    android:layout_width="230dp"
                    android:layout_height="match_parent" />

                <EditText
                    android:id="@+id/set_13"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/set_14"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/set_15"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/game_6"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:text="@string/ws" />

                <TextView
                    android:id="@+id/name_6"
                    android:layout_width="230dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/name_14"
                    android:layout_width="230dp"
                    android:layout_height="match_parent" />

                <EditText
                    android:id="@+id/set_16"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/set_17"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/set_18"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/game_7"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:text="@string/mx" />

                <TextView
                    android:id="@+id/name_7"
                    android:layout_width="230dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/name_15"
                    android:layout_width="230dp"
                    android:layout_height="match_parent" />

                <EditText
                    android:id="@+id/set_19"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/set_20"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/set_21"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />
            </TableRow>
        </TableLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>